Move Neo4j schema procedure to CAPS
Also align harness version with Neo4j version

Co-Authored-By: Martin Junghanns <s1ck@users.noreply.github.com>

--- a/okapi-testing/pom.xml
+++ b/okapi-testing/pom.xml
@@ -35,7 +35,7 @@
     <dependency>
       <groupId>org.neo4j.test</groupId>
       <artifactId>neo4j-harness</artifactId>
-      <version>${dep.neo4j.harness.version}</version>
+      <version>${dep.neo4j.version}</version>
     </dependency>
 
     <dependency>
