--- a/spark-cypher-examples/pom.xml
+++ b/spark-cypher-examples/pom.xml
@@ -34,7 +34,7 @@
     <dependency>
       <groupId>org.neo4j.test</groupId>
       <artifactId>neo4j-harness</artifactId>
-      <version>${dep.neo4j.harness.version}</version>
+      <version>${dep.neo4j.version}</version>
     </dependency>
 
     <!-- Test -->
