--- a/okapi-neo4j-procedures/pom.xml
+++ b/okapi-neo4j-procedures/pom.xml
@@ -39,6 +39,7 @@
       <groupId>org.neo4j.test</groupId>
       <artifactId>neo4j-harness</artifactId>
       <version>${dep.neo4j.version}</version>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
