Exclude scala from fat jars

--- a/pom.xml
+++ b/pom.xml
@@ -457,6 +457,7 @@
                     <excludes>
                       <exclude>junit:junit</exclude>
                       <exclude>jmock:*</exclude>
+                      <exclude>org.scala-lang:*</exclude>
                       <exclude>org.scalatest:*</exclude>
                       <exclude>org.scalacheck:*</exclude>
                       <exclude>org.apache.maven:lib:tests</exclude>
