Add creation of indexes that speed up merge operations
Co-authored-by: Philip Stutz <philip.stutz@gmail.com>

--- a/okapi-testing/pom.xml
+++ b/okapi-testing/pom.xml
@@ -34,7 +34,7 @@
 
     <dependency>
       <groupId>org.neo4j.test</groupId>
-      <artifactId>neo4j-harness</artifactId>
+      <artifactId>neo4j-harness-enterprise</artifactId>
       <version>${dep.neo4j.version}</version>
     </dependency>
 
