Add Okapi parser module

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
     <plugin.maven-surefire.version>2.20.1</plugin.maven-surefire.version>
 
     <!-- Used dependencies -->
+    <dep.antlr4.version>4.7.1</dep.antlr4.version>
     <dep.cats.version>1.0.1</dep.cats.version>
     <dep.eff.version>5.0.0</dep.eff.version>
     <dep.hadoop.version>2.7.0</dep.hadoop.version>
@@ -372,6 +373,7 @@
         <module>okapi-testing</module>
         <module>okapi-neo4j-io</module>
         <module>okapi-neo4j-io-testing</module>
+        <module>okapi-parser</module>
         <module>okapi-ir</module>
         <module>okapi-neo4j-procedures</module>
         <module>okapi-logical</module>
@@ -431,6 +433,7 @@
         <module>okapi-testing</module>
         <module>okapi-neo4j-io</module>
         <module>okapi-neo4j-io-testing</module>
+        <module>okapi-parser</module>
         <module>okapi-ir</module>
         <module>okapi-neo4j-procedures</module>
         <module>okapi-logical</module>
