Support recursive view evaluation in simple cases

--- a/okapi-api/pom.xml
+++ b/okapi-api/pom.xml
@@ -32,6 +32,12 @@
       <version>${project.parent.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.opencypher</groupId>
+      <artifactId>front-end-9.0</artifactId>
+      <version>${dep.opencypher.front-end.version}</version>
+    </dependency>
+
     <!-- Util -->
 
     <!-- Json serialization -->
