--- a/spark-cypher-testing/pom.xml
+++ b/spark-cypher-testing/pom.xml
@@ -58,6 +58,13 @@
       </exclusions>
     </dependency>
 
+    <!--Needed for conflict with version shipped by Neo4j-->
+    <dependency>
+      <groupId>net.jpountz.lz4</groupId>
+      <artifactId>lz4</artifactId>
+      <version>1.3.0</version>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_${project.scala.binary.version}</artifactId>
