Add Orc and Parquet LocalFS and HDFS tests
Co-authored-by: Philip Stutz <philip.stutz@gmail.com>
Co-authored-by: Hannes Miller <hannesmiller@hotmail.com>

--- a/spark-cypher-testing/pom.xml
+++ b/spark-cypher-testing/pom.xml
@@ -73,6 +73,13 @@
       <scope>${dep.spark.scope}</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-hive_${project.scala.binary.version}</artifactId>
+      <version>${dep.spark.version}</version>
+      <scope>${dep.spark.scope}</scope>
+    </dependency>
+
     <!-- Testing -->
     <dependency>
       <groupId>org.scalatest</groupId>
