--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
     <!-- Used dependencies -->
     <dep.cats.version>1.0.1</dep.cats.version>
     <dep.eff.version>5.0.0</dep.eff.version>
+    <dep.fastparse.version>1.0.0</dep.fastparse.version>
     <dep.hadoop.version>2.7.0</dep.hadoop.version>
     <dep.neo4j.version>3.4.6</dep.neo4j.version>
     <dep.neo4j.driver.version>1.6.1</dep.neo4j.driver.version>
@@ -383,6 +384,7 @@
         <module>spark-cypher-examples</module>
         <module>spark-cypher-tck</module>
         <module>spark-cypher-testing</module>
+        <module>sql-ddl</module>
       </modules>
     </profile>
 
@@ -440,6 +442,7 @@
         <module>okapi-trees</module>
         <module>spark-cypher</module>
         <module>spark-cypher-testing</module>
+        <module>sql-ddl</module>
       </modules>
 
       <build>
