Add parser for limited feature set of DDL
Co-authored-by: Max Kießling <max.kiessling@neotechnology.com>

--- a/sql-ddl/pom.xml
+++ b/sql-ddl/pom.xml
@@ -22,6 +22,12 @@
 
     <dependency>
       <groupId>org.opencypher</groupId>
+      <artifactId>okapi-trees</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.opencypher</groupId>
       <artifactId>okapi-api</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
