--- a/sql-ddl/pom.xml
+++ b/sql-ddl/pom.xml
@@ -38,6 +38,15 @@
       <version>${dep.fastparse.version}</version>
     </dependency>
 
+    <!--Test-->
+
+    <dependency>
+      <groupId>org.opencypher</groupId>
+      <artifactId>okapi-testing</artifactId>
+      <version>${project.parent.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
 </project>
