--- a/spark-cypher/pom.xml
+++ b/spark-cypher/pom.xml
@@ -31,6 +31,12 @@
       <version>${project.parent.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.opencypher</groupId>
+      <artifactId>sql-ddl</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+
     <!-- Spark -->
     <dependency>
       <groupId>org.apache.spark</groupId>
