--- a/sql-ddl/pom.xml
+++ b/sql-ddl/pom.xml
@@ -10,9 +10,13 @@
     <version>0.2.1-SNAPSHOT</version>
   </parent>
 
-  <artifactId>sql-ddl</artifactId>
+  <artifactId>graph-ddl</artifactId>
 
-  <name>SQL DDL</name>
+  <name>Graph DDL</name>
+
+  <description>
+    Graph DDL - A dual language for declaring graph schemas, and to define mappings from a relational system into graphs
+  </description>
 
   <properties>
     <project.rootdir>${project.parent.basedir}</project.rootdir>
