--- a/okapi-neo4j-io-testing/pom.xml
+++ b/okapi-neo4j-io-testing/pom.xml
@@ -3,13 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>org.opencypher</groupId>
     <artifactId>okapi</artifactId>
     <version>0.2.1-SNAPSHOT</version>
   </parent>
+
   <artifactId>okapi-neo4j-io-testing</artifactId>
   <name>Okapi - Neo4j IO test utils</name>
+
   <properties>
     <project.rootdir>${project.parent.basedir}</project.rootdir>
   </properties>
@@ -45,4 +48,19 @@
       </exclusions>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.neo4j.build.plugins</groupId>
+        <artifactId>licensing-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>list-all-licenses</id>
+            <phase>none</phase>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
