--- a/spark-cypher-testing/pom.xml
+++ b/spark-cypher-testing/pom.xml
@@ -122,6 +122,13 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>${dep.h2.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
