Never fork when running tests with scalatest plugin
This is brittle as it may cause the test run to use a different JVM that intended.
It will use a command line `java` which could be anything on the running machine.

--- a/pom.xml
+++ b/pom.xml
@@ -356,6 +356,7 @@
         <configuration>
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
           <junitxml>.</junitxml>
+          <forkMode>never</forkMode>
           <filereports>WDF TestSuite.txt</filereports>
           <tagsToExclude>CAPSPatternGraphFactory</tagsToExclude>
           <!-- Enable full exception stack traces -->
