Add JdbcSqlGraphSourceExample based on CensusDB

--- a/spark-cypher-examples/pom.xml
+++ b/spark-cypher-examples/pom.xml
@@ -52,6 +52,12 @@
       <version>${project.parent.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>${dep.h2.version}</version>
+    </dependency>
+
   </dependencies>
 
   <build>
