--- a/okapi-trees/pom.xml
+++ b/okapi-trees/pom.xml
@@ -26,6 +26,13 @@
       <version>${dep.cats.version}</version>
     </dependency>
 
+    <!-- Testing -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${dep.junit.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
