--- a/okapi-api/pom.xml
+++ b/okapi-api/pom.xml
@@ -56,6 +56,13 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${dep.junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
 </project>
