--- a/okapi-testing/pom.xml
+++ b/okapi-testing/pom.xml
@@ -19,7 +19,6 @@
   </properties>
 
   <dependencies>
-
     <dependency>
       <groupId>org.opencypher</groupId>
       <artifactId>okapi-api</artifactId>
@@ -42,6 +41,12 @@
       <groupId>org.bouncycastle</groupId>
       <artifactId>bctls-jdk15on</artifactId>
       <version>${dep.bouncycastle.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${dep.junit.version}</version>
     </dependency>
 
     <dependency>
