Implement necessary classes to run a simple Cypher query

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
     <module>spark-cypher-tck</module>
     <module>spark-cypher-testing</module>
     <module>graph-ddl</module>
+    <module>mem-cypher</module>
   </modules>
 
   <build>
