Run gradle init to create gradle project
- auto generated gradle build from maven pom:s

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,12 @@ metastore_*
 caps-core/.project
 caps-core/.classpath
 .project
+
+# Gradle
+.gradle
+/build/
+gradle-app.setting
+!gradle-wrapper.jar
+.gradletasknamecache
+# gradle/wrapper/gradle-wrapper.properties
+
